src/scss/frontend.scss
:root {

	.full-width .crsg-stationfinder,
	.fullwidth .crsg-stationfinder {
		padding: 0 1em;
	}

	.crsg-sf-filters {
		display: grid;
		grid-template-columns: 1fr 1fr 1fr 2fr;
		grid-template-rows: 1fr;
		gap: 1em;
		align-items: start;

		list-style: none;
		margin: 0 0 1em;
		padding: 0;

		li {
			margin: 0;
			padding: 0;
		}

		@media (max-width: 640px) {
			display: block;
		}

		label {
			display: block;
		}
		select, input[type="text"], button {
			font-size: 16px;
			font-family: sans-serif;
			font-weight: 700;
			color: #444;
			line-height: 1.3;
			padding: .6em 1.4em .5em .8em;
			width: 100%;
			max-width: 100%; 
			box-sizing: border-box;
			margin: 0;
			border: 1px solid #aaa;
			border-radius: .5em;
			appearance: none;
			background-color: #fff;

			&::-ms-expand {
				display: none;
			}
			&:hover {
				border-color: #888;
			}
			&:focus {
				border-color: rgb(0,89,142);
				color: #222; 
				outline: none;
			}
			& option {
				font-weight:normal;
			}
		}
		select {
			background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
			background-repeat: no-repeat, repeat;
			background-position: right .7em top 50%, 0 0;
			background-size: .65em auto, 100%;
		}
		button {
			background: rgb(0,89,142);
			color: #fff;

			&:focus {
				color: #fff;
				border: 0;
				box-shadow: none;
			}
		}

		.crsg-sf-search {
			display: grid;
			grid-template: "a a a"
			               "b b c";
			grid-column-gap: .5em;
			width: 100%;

			label {
				grid-area: a;
			}
			input {
				grid-area: b;
			}
			button {
				grid-area: c;
			}
		}
	}

	.crsg-sf-stations {
		display: grid;
		grid-template-columns: 1fr 1fr 1fr 1fr;
		gap: 1em;
		align-items: center;

		list-style: none;
		margin: 0;
		padding: 0;

		@media (max-width: 900px) {
			grid-template-columns: 1fr 1fr 1fr;
		}

		@media (max-width: 640px) {
			grid-template-columns: 1fr 1fr;
			gap: .5em;
		}

		li {
			display: block;
			margin: 0;
			padding: 0;
		}

		a {
			display: block;
			outline: 0;

			padding: 1em;

			background: #fff;
			box-shadow: 0 0 1em rgba(0,0,0,0.1);
			border: 1px solid rgba(0,89,142,0.2);
			border-radius: 0.6em;

			color: #444;

			font-size: 0.6em;
			text-align: center;
			text-decoration: none;

			transition: transform .15s ease-in-out,
						box-shadow .2s ease-in-out,
						color .1s ease-in-out .1s,
						border-color .1s ease-in-out .05s;

			overflow: hidden;

			&:hover {
				box-shadow: 0 0 1em rgba(0,0,0,0.3);
				border-color: 1px solid rgba(0,89,142,0.8);
				transform: scale(1.04);
				transform-origin: center center;
			}
		}

		figure {
			display: grid;
			width: 100%;
			height: 20vh;
			margin: 0 0 .5em;

			@media (max-width: 640px) {
				height: 15vh;
				margin: 0 0 .75em;
			}
		}

		img {
			align-self: center;
			justify-self: center;
			max-width: 90%;
			max-height: 100%;
		}

		h3 {
			font-weight: bold;
			margin: 0 0 .25em;
		}
	}

}

